<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rear View Camera</string>
    <string name="title_activity_settings">Настройки</string>

    <string name="notification_bar_title">Rear View Camera</string>
    <string name="notification_bar_subtitle">Нажмите, чтобы открыть настройки</string>

    <string name="screen_size_placeholder" translatable="false">%1$sx%2$s</string>

    <string name="pref_device_settings_title">Устройство Easycap</string>

    <string name="pref_manual_set_dev_loc">Указать путь к устройству вручную</string>
    <string name="pref_manual_set_dev_loc_summ">Включите, если устройство не обнаружено автоматически</string>
    <string name="pref_select_dev_loc">Файл устройства</string>
    <string name="pref_select_dev_loc_default">/dev/video0</string>
    <string name="pref_name_manual_set_dev_loc_interval">Искать номер устройства в интервале чисел</string>
    <string name="pref_summ_manual_set_dev_loc_interval">Включите, если устройство определяется в определённом динамическом диапазоне</string>
    <string name="pref_name_manual_set_dev_loc_interval_min">Минимальный номер устройства</string>
    <string name="pref_summ_manual_set_dev_loc_interval_min">0</string>
    <string name="pref_name_manual_set_dev_loc_interval_max">Максимальный номер устройства</string>
    <string name="pref_summ_manual_set_dev_loc_interval_max">3</string>

    <string name="pref_manual_set_type">Указать тип устройства вручную</string>
    <string name="pref_manual_set_type_summ">Включите, если тип Easycap-устройства не определён автоматически</string>
    <string name="pref_easycap_type">Тип Easycap-устройства</string>

    <string-array name="pref_select_easycap_entries">
        <item>UTV007</item>
        <item>Empia</item>
        <item>STK1160</item>
        <item>Somagic</item>
        <item>UVC</item>
    </string-array>

    <string name="pref_select_easycap_default">UTV007</string>
    <string name="pref_select_standard">Стандарт кодирования цвета</string>
    <string name="pref_select_standard_default">0</string>

    <string-array name="pref_select_standard_entries">
        <item>NTSC</item>
        <item>PAL</item>
    </string-array>
    <string-array name="pref_select_standard_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_name_keep_aspect_ratio">Сохранять пропорции изображения</string>
    <string name="pref_summ_keep_aspect_ratio">Отключите, чтобы изображение было растянуто на весь экран</string>

    <string name="pref_name_mirrored">Отразить изображение зеркально</string>

    <string name="pref_name_uvc_resolution">Разрешение UVC-камеры</string>
    <string-array name="pref_titles_uvc_resolution">
        <item>1920 x 1080 [16:9]</item>
        <item>1600 х 1200 [4:3]</item>
        <item>1280 x 1024 [5:4]</item>
        <item>1280 x 960 [4:3]</item>
        <item>1280 x 720 [16:9]</item>
        <item>960 x 544 [16:9]</item>
        <item>800 x 600 [4:3]</item>
        <item>704 x 576 [4:3]</item>
        <item>640 x 480 [4:3]</item>
        <item>640 x 360 [16:9]</item>
        <item>424 x 240 [4:3]</item>
        <item>352 x 240 [4:3]</item>
        <item>320 x 240 [4:3]</item>
        <item>320 x 180 [16:9]</item>
    </string-array>
    <string-array name="pref_values_uvc_resolution">
        <item>1920x1080</item>
        <item>1600х1200</item>
        <item>1280x1024</item>
        <item>1280x960</item>
        <item>1280x720</item>
        <item>960x544</item>
        <item>800x600</item>
        <item>704x576</item>
        <item>640x480</item>
        <item>640x360</item>
        <item>424x240</item>
        <item>352x240</item>
        <item>320x240</item>
        <item>320x180</item>
    </string-array>
    <string name="pref_default_uvc_resolution">640x480</string>

    <string name="pref_layout_settings_title">Общие</string>

    <string name="pref_name_autodetect_usb_device">Автоопределение подключения устройства</string>
    <string name="pref_summ_autodetect_usb_device">Запускать/завершать программу при физическом подключении/отключении Easycap-устройства\nВо избежание ошибок не включайте совместно с &#171;Интеграция с Remote Inputs Manager&#187;</string>

    <!--<string name="pref_name_autodetect_usb_device_interval">Интервал проверки подключения (мс)</string>-->
    <!--<string name="pref_summ_autodetect_usb_device_interval">1000</string>-->

    <string name="pref_name_autodetect_rim">Интеграция с Remote Inputs Manager</string>
    <string name="pref_summ_autodetect_rim">Запускать программу при получении EXTRA_ARGS от Remote Inputs Manager.\nЗавершать программу при получении любого значения EXTRA_ARGS не совпадающего с указанным.\nФормат &#60;extra_command:extra_args&#62;\nВо избежание ошибок не включайте совместно с &#171;Автоопределение подключения устройства&#187;</string>
    <string name="pref_name_autodetect_rim_command">EXTRA_COMMAND</string>
    <string name="pref_summ_autodetect_rim_command">TransmissionGearPosition</string>
    <string name="pref_name_autodetect_rim_args">EXTRA_ARGS</string>
    <string name="pref_summ_autodetect_rim_args">Reverse</string>

    <string name="pref_name_fullscreen">Полноэкранный режим</string>
    <string name="pref_summ_fullscreen">Скрыть строку уведомлений и навигационную панель Enable to hide action/navigation bars</string>

    <string name="pref_name_mute">Отключать звук</string>
    <string name="pref_summ_mute">Отключать звук медиаплеера во время работы программы</string>

    <string name="pref_name_debug">Отладочная информация</string>
    <string name="pref_summ_debug">Включить всплывающие окна и отправлять дополнительную информацию в logcat</string>


    <!-- Guide lines settings -->
    <string name="pref_header_guide_lines">Парковочные линии</string>

    <string name="pref_title_guide_lines_show">Отображать парковочные линии</string>

    <string name="pref_title_guide_lines_style">Стиль парковочных линий</string>
    <string-array name="pref_guide_lines_style_titles">
        <item>Стиль 1</item>
    </string-array>
    <string-array name="pref_guide_lines_style_values" translatable="false">
        <item>0</item>
    </string-array>

    <string name="pref_title_guide_lines_move_step">Шаг изменения парковочной линии</string>
    <string name="pref_default_guide_lines_move_step">2</string>
    <string name="pref_guide_lines_move_step_current_value">Шаг $1</string>
    <string name="pref_guide_lines_move_step_unit">%</string>

    <string name="pref_title_guide_lines_calibrate">Настройка&#8230;</string>

    <string name="gl_saved">Настройки парковочных линий сохранены</string>
    <string name="choose_line">Выберите точку для редактирования</string>

    <string name="title_confirm_reset_guide_line_style">Сброс настроек</string>
    <string name="confirm_reset_guide_line_style">Вы уверены что хотить установить настройки парковочных линий в значения по умолчанию?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="guide_lines_style_was_reset">Настройки парковочных линий установлены по умолчанию</string>

    <string translatable="false" name="ic_up" >&#xe001;</string>
    <string translatable="false" name="ic_right">&#xe004;</string>
    <string translatable="false" name="ic_down">&#xe000;</string>
    <string translatable="false" name="ic_left">&#xe002;</string>
    <string translatable="false" name="ic_painter">&#xe003;</string>
    <string translatable="false" name="ic_reset">&#xe005;</string>
    <string translatable="false" name="ic_cancel">&#xe006;</string>
    <string translatable="false" name="ic_ok">&#xe007;</string>
    <string translatable="false" name="ic_car">&#xe008;</string>


</resources>
